--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,20 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PFD9XtP/ihnChnJMwx+CqfkPdWqFFhy/U4X/3Y92wBg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://monlivreur-app.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=monlivhadmin.mysql.db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=monlivhadmin
+DB_USERNAME=monlivhadmin
+DB_PASSWORD=Monliv2020
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
