--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.0",
+        "laravel/sanctum": "^2.8",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
