--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/passport": "^10.0",
         "laravel/sanctum": "^2.8",
         "laravel/socialite": "^5.1",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "nexmo/client": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
