--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/laravel-firebase": "^3.1",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.0",
         "laravel/passport": "^10.0",
